--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Todo List</title>
     <link rel="stylesheet" type="text/css" href="assets/css/todos.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <script type="text/javascript" src="assets/js/lib/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="assets/js/todos.js"></script>
 </head>
 <body>
     <div id="container">
-        <h1>To-Do List</h1>
-        <input type="text">
+        <h1>To-Do List<i class="fa fa-plus"></i></h1>
+        <input type="text" placeholder="Add New Todo">
         <ul>
-            <li><span>X</span> Go To Potions Class</li>
-            <li><span>X</span> Buy New Robes</li>
-            <li><span>X</span> Visit Hagrid</li>
+            <li><span><i class="fa fa-trash"></i></span> Go To Potions Class</li>
+            <li><span><i class="fa fa-trash"></i></span> Buy New Robes</li>
+            <li><span><i class="fa fa-trash"></i></span> Visit Hagrid</li>
         </ul>
     </div>
 </body>
